# agentic-coding-protocol

./: .gitignore  Cargo.toml  LICENSE.MIT  README.md  eslint.config.js  package-lock.json  package.json  protocol.md  schema.json  tsconfig.json
.github/workflows/: ci.yml  test.yml
rust/: acp.rs  acp_tests.rs  generate.rs  schema.rs
rust/acp-macros/: Cargo.toml  README.md
rust/acp-macros/src/: lib.rs
typescript/: acp.test.ts  acp.ts  connection.ts  generate.js  schema.ts
