[package]
name = "agentic-coding-protocol"
version = "0.0.1"
edition = "2024"
license = "MIT"

[lib]
path = "rust/acp.rs"
doctest = false

[[bin]]
name = "generate"
path = "rust/generate.rs"

[dependencies]
async-trait = "0.1"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
