[package]
name = "agentic-coding-protocol"
version = "0.0.1"
edition = "2024"
license = "MIT"

[lib]
path = "rust/acp.rs"
doctest = false

[[bin]]
name = "generate"
path = "rust/generate.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
futures = "0.3"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
